--- a/src/main/webapp/account/bimename.xhtml
+++ b/src/main/webapp/account/bimename.xhtml
@@ -109,7 +109,7 @@
 
                 <p:outputLabel value="#{msg['takhfife_modiriati']} (#{'%'}) : " for="takhfife_modiriati" />
                 <p:inputText id="takhfife_modiriati" value="#{bimenameBean.bimename.pishnahadeFaal.ezafeKasr.takhfife_modiriati}"
-                             style="font-family: byekan" disabled="#{mainView.inAnyOf([state.SODOOR_NEW_BIMENAME_MOHASEBE,state.NAMAYESH_BIMENAME,state.SABT_NEW_PISHNAHAD_MOHASEBE])}"/>
+                             style="font-family: byekan" disabled="#{mainView.inAnyOf([state.SODOOR_NEW_BIMENAME_MOHASEBE,state.NAMAYESH_BIMENAME,state.SABT_NEW_PISHNAHAD_MOHASEBE,state.TAGHIR_BIMENAME,state.TAGHIR_BIMENAME_MOHASEBE_HAGHEBIME])}"/>
 
                 <p:outputLabel value="#{msg['ezafe_nerkh_pezeshki']} (#{'%'}) : " for="ezafenerkhpezeshki" />
                 <p:inputText id="ezafenerkhpezeshki" value="#{bimenameBean.bimename.pishnahadeFaal.ezafeKasr.ezafe_nerkh_pezeshki}"
