--- a/src/main/webapp/account/elhaghiyelist.xhtml
+++ b/src/main/webapp/account/elhaghiyelist.xhtml
@@ -5,7 +5,7 @@
 >
 
     <p:panel header="#{msg['jostejuElhaghiye']}" toggleable="true"
-             toggleSpeed="500" style="direction: rtl"
+             toggleSpeed="500" style="direction: rtl;"
              styleClass="panelbackground">
 
     <p align="center">
