--- a/src/main/webapp/account/shoghladminpanel.xhtml
+++ b/src/main/webapp/account/shoghladminpanel.xhtml
@@ -29,7 +29,7 @@
                 </p:column>
 
                 <p:column headerText="#{msg['tabaghekhatar']}" styleClass="matnfarsi">
-                    <p:outputLabel style="font-family: byekan" value="#{nextshoghl.defaultTabagheKhatar}"/>
+                    <p:outputLabel style="font-family: byekan" value="#{msg[nextshoghl.defaultTabagheKhatar]}"/>
                 </p:column>
 
                 <p:column headerText="#{msg['amaliat']}" styleClass="matnfarsi" width="145" style="text-align: center">
