--- a/src/main/webapp/account/bimenamelist.xhtml
+++ b/src/main/webapp/account/bimenamelist.xhtml
@@ -205,6 +205,8 @@
                              icon="fa fa-plus"
                              styleClass="matnfarsi"
                              style="border-color:#303030; border-width: 2px;"
+                             rendered="#{mainView.inAnyOf([state.LIST_BIMENAME])}"/>
+
             />
         </shiro:hasPermission>
 
