chape khesarat va kode melli daryaft konande

--- a/src/main/webapp/account/dialog/havalekhesarat.xhtml
+++ b/src/main/webapp/account/dialog/havalekhesarat.xhtml
@@ -39,6 +39,9 @@
                     <p:outputLabel value="#{msg['namedaryaftkonande']} : " for="namedaryaftkonande" />
                     <p:inputText id="namedaryaftkonande" value="#{khesaratBean.newHavaleKhesarat.name_daryaft_konande}" style="font-family: byekan"/>
 
+                    <p:outputLabel value="#{msg['kodemelidaryaftkonande']} : " for="kodemelidaryaftkonande" />
+                    <p:inputText id="kodemelidaryaftkonande" value="#{khesaratBean.newHavaleKhesarat.kodemelli_daryaft_konande}" style="font-family: byekan"/>
+
                     <p:outputLabel value="#{msg['shomareshaba']} : " for="shomareshaba" />
                     <p:inputText id="shomareshaba" value="#{khesaratBean.newHavaleKhesarat.ettelaateShaba}" style="font-family: byekan"/>
 
